收口低风险弃用接口并补充技术栈审计